--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 
 		<!-- Main style sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<!-- responsive style sheet -->
-		<link rel="stylesheet" type="text/css" href="css/responsive.css">
+		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 
 		<!-- Start Bootstrap Carousel HEAD section -->
 <script type= "text/javascript" src = "Back/js/countries.js"></script>
