--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 
 		<!-- Start Bootstrap Carousel HEAD section -->
-<script type= "text/javascript" src = "Back/js/countries.js"></script>
+<script type= "text/javascript" src = "./Back/js/countries.js"></script>
 
 	</head>
 
